Stop hover effect on iPhone

--- a/public/styles/iphone.css
+++ b/public/styles/iphone.css
@@ -2,3 +2,7 @@
 {
     display: none;
 }
+.ListItem:hover
+{
+    background-color: white;
+}
